After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 650476 - Seg. fault upon startup
Seg. fault upon startup
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: general
git master
Other OpenBSD
: Normal critical
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-05-18 12:30 UTC by Jasper Lievisse Adriaanse
Modified: 2011-05-23 22:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jasper Lievisse Adriaanse 2011-05-18 12:30:26 UTC
Hi,

Upon launching gnome-panel I get the following output in my console:
cerebrum:jasper {115} gnome-panel


(gnome-panel:31944): Gtk-CRITICAL **: gtk_accelerator_parse: assertion `accelerator != NULL' failed

** (gnome-panel:31944): WARNING **: Unable to parse mouse modifier '(null)'


** (gnome-panel:31944): WARNING **: Could not ask session manager if shut down is available: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gnome.SessionManager was not provided by any .service files

(gnome-panel:31944): GLib-CRITICAL **: g_variant_get_va: assertion `value != NULL' failed
Segmentation fault (core dumped)
cerebrum:jasper {116}

Attaching GDB gives a bit more information:

cerebrum:jasper {152} gdb gnome-panel

GNU gdb 6.3
Copyright 2004 Free Software Foundation, Inc.
GDB is free software, covered by the GNU General Public License, and you are
welcome to change it and/or distribute copies of it under certain conditions.
Type "show copying" to see the conditions.
There is absolutely no warranty for GDB.  Type "show warranty" for details.
This GDB was configured as "i386-unknown-openbsd4.9"...
(gdb) run
Starting program: /usr/local/bin/gnome-panel 

(gnome-panel:18911): Gtk-CRITICAL **: gtk_accelerator_parse: assertion `accelerator != NULL' failed

** (gnome-panel:18911): WARNING **: Unable to parse mouse modifier '(null)'

[New process 18911, thread 0x8210f000]
[New process 18911, thread 0x82da5000]

** (gnome-panel:18911): WARNING **: Could not ask session manager if shut down is available: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.gnome.SessionManager was not provided by any .service files

(gnome-panel:18911): GLib-CRITICAL **: g_variant_get_va: assertion `value != NULL' failed

Program received signal SIGSEGV, Segmentation fault.
[Switching to process 18911, thread 0x8634d400]
0x0792b215 in g_atomic_int_exchange_and_add (atomic=0x14, val=-1)
    at gatomic-gcc.c:29
29	  return __sync_fetch_and_add (atomic, val);
(gdb) bt
  • #0 g_atomic_int_exchange_and_add
    at gatomic-gcc.c line 29
  • #1 g_variant_unref
    at gvariant-core.c line 617
  • #2 panel_session_manager_get_presence
    at panel-session-manager.c line 183
  • #3 panel_desktop_menu_item_new
    at panel-menu-items.c line 1745
  • #4 panel_user_menu_init
    at panel-user-menu.c line 54
  • #5 g_type_create_instance
    at gtype.c line 1889
  • #6 g_object_constructor
    at gobject.c line 1615
  • #7 g_object_newv
    at gobject.c line 1398
  • #8 g_object_new
    at gobject.c line 1308
  • #9 panel_user_menu_load
    at panel-user-menu.c line 96
  • #10 panel_object_loader_idle_handler
    at panel-object-loader.c line 229
  • #11 g_idle_dispatch
    at gmain.c line 4553
  • #12 g_main_dispatch
    at gmain.c line 2448
  • #13 g_main_context_dispatch
    at gmain.c line 3021
  • #14 g_main_context_iterate
    at gmain.c line 3099
  • #15 g_main_loop_run
    at gmain.c line 3307
  • #16 gtk_main
    from /usr/local/lib/libgtk-3.so.0.0
  • #17 main
    at main.c line 115
  • #0 g_atomic_int_exchange_and_add
    at gatomic-gcc.c line 29
  • #1 g_variant_unref
    at gvariant-core.c line 617
  • #2 panel_session_manager_get_presence
    at panel-session-manager.c line 183
  • #3 panel_desktop_menu_item_new
    at panel-menu-items.c line 1745
  • #4 panel_user_menu_init
    at panel-user-menu.c line 54
  • #5 g_type_create_instance
    at gtype.c line 1889
  • #6 g_object_constructor
    at gobject.c line 1615
  • #7 g_object_newv
    at gobject.c line 1398
  • #8 g_object_new
  • #9 panel_user_menu_load
    at panel-user-menu.c line 96
  • #10 panel_object_loader_idle_handler
    at panel-object-loader.c line 229
  • #11 g_idle_dispatch
    at gmain.c line 4553
  • #12 g_main_dispatch
    at gmain.c line 2448
  • #13 g_main_context_dispatch
    at gmain.c line 3021
  • #14 g_main_context_iterate
    at gmain.c line 3099
  • #15 g_main_loop_run
    at gmain.c line 3307
  • #16 gtk_main
    from /usr/local/lib/libgtk-3.so.0.0
  • #17 main
    at main.c line 115
cerebrum:jasper {153} 

Amongst others I have installed: glib 2.28.6, gtk+ 3.0.9, gnome-panel 3.0.0.1, gnome-desktop 3.0.1. Any idea what's going on or how to further debug this?
Comment 1 Vincent Untz 2011-05-23 22:09:14 UTC
I pushed a fix. Btw, it seems you're running without gnome-session according to the errors. There's no guarantee the panel will work 100% reliably (some features like logout will not work, I guess).
Comment 2 Jasper Lievisse Adriaanse 2011-05-23 22:12:22 UTC
Thanks. I was running it indeed without gnome-session as I was merely testing the panel in openbox.