panel: Fix crash when running without gnome-session

https://bugzilla.gnome.org/show_bug.cgi?id=650476