gnome-panel/libpanel-util/panel-session-manager.c
@@ -179,6 +179,12 @@ panel_session_manager_get_presence (PanelSessionManager *manager)
 
         variant = g_dbus_proxy_get_cached_property (manager->priv->presence_proxy,
                                                     "status");
+
+        if (!variant) {
+                g_warning ("Could not get presence from session manager.");
+                return PANEL_SESSION_MANAGER_PRESENCE_AVAILABLE;
+        }
+
         g_variant_get (variant, "u", &ret);
         g_variant_unref (variant);
 
